force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <description>合同对象</description>
    <label>Contract</label>
    <nameField>
        <label>Contract filing code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>