force-app/main/default/objects/Contract__c/fields/Contract_filing_end_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_end_date__c</fullName>
    <description>截止日(contract_filing_end_date)</description>
    <label>Contract filing end date</label>
    <type>Date</type>
</CustomField>