force-app/main/default/objects/Contract__c/fields/Contract_filing_id__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>合同及备案编码</description>
    <externalId>true</externalId>
    <label>外键</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>