force-app/main/default/objects/Contract__c/fields/Contract_filing_name__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_name__c</fullName>
    <description>合同及备案名称</description>
    <label>Contract filing name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>