force-app/main/default/objects/Contract__c/fields/Contract_filing_start_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_start_date__c</fullName>
    <description>起始日(contract_filing_start_date)</description>
    <label>Contract filing start date</label>
    <type>Date</type>
</CustomField>