force-app/main/default/objects/Contract__c/fields/Contract_filing_status__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_status__c</fullName>
    <description>状态</description>
    <label>Contract filing status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>