force-app/main/default/objects/Contract__c/fields/Contract_filing_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_filing_type__c</fullName>
    <description>合同及备案类型(contract_filing_type)</description>
    <label>Contract filing type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>