force-app/main/default/objects/Contract__c/fields/Create_by__c.field-meta.xml
<CustomField>
    <fullName>Create_by__c</fullName>
    <description>创建人(create_by)</description>
    <label>Create by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>