force-app/main/default/objects/Contract__c/fields/Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Customer_id__c</fullName>
    <description>客户编码(customer_id)</description>
    <label>Customer id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>