force-app/main/default/objects/Contract__c/fields/Customer_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_name__c</fullName>
    <description>客户名称(customer_name)</description>
    <label>Customer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>