force-app/main/default/objects/Contract__c/fields/payment_term__c.field-meta.xml
<CustomField>
    <fullName>payment_term__c</fullName>
    <label>Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>