force-app/main/default/objects/Contract__c/fields/sap_customer_code__c.field-meta.xml
<CustomField>
    <fullName>sap_customer_code__c</fullName>
    <label>sap_customer_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>