force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_filing_name__c</columns>
    <columns>Contract_filing_start_date__c</columns>
    <columns>Contract_filing_end_date__c</columns>
    <columns>Contract_filing_status__c</columns>
    <columns>Contract_filing_type__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>